@@ -1,4 +1,4 @@
 DIST granite-5.2.4.tar.gz 390145 BLAKE2B 30abee1669bf2211aa776a5ddf38b914bc95e466f2853f4e852b77947b666c06ce8ac77a47b22bce0cdbf8e6804935007b5cef700c49db302528b7bbb0063543 SHA512 3a52a92a49f887bb802754b99b7c9c3fd13c197c74da7c25f1fd4c03b76d916197079b813909d2cceb11cb10b26e9f64978563b95319d0c744c5b612c50ce306
-EBUILD granite-5.2.4.ebuild 811 BLAKE2B aaa81023b47329cd82c9c89a55291bf984f7a7a223775ec6ce9eb34431be0b7097250e4aa6ccdc81b5d1b5b26684675be620951da33cd67bff523601573d0703 SHA512 3c044662935eece4589f60b387c21b3d91f9c2dd5124ff630e5313b4a3204f820a745ad69f951d9b5b09faa39e34016b79451a41e881f3584f4b45a3353fe4be
-MISC ChangeLog 339 BLAKE2B b328e640bfcabcad14cc94e58c4813e68f9943498d3ca73417fc370f25eb5dd7752e31f74eb5a6796beb6f7ff338e16f4044f47fce4df1f7f4e89fb462e6de13 SHA512 0c386156123854c13ad7140198cafb9c9b1f4d1e801bbbf31914e2e16a90ccbc215d55be83235587c20b9a0d6e40f8856e1832be19e16217cdb0bd601e5063e3
+EBUILD granite-5.2.4.ebuild 861 BLAKE2B 63ca66c2dbe7391f7687f76cfb70009d0a273ad38d859f1fa74d84e9480d0d89338bc4a305a823548afcce7e3bf7d34fa413c30e9f0fab08e3c252b721ec7780 SHA512 904a5a5ba0e8b95fb2973ae81d57212d059fde84efb8c660d81f17b7d4539c098e0724b8c4acbd39b31c2f1cc65e77b08adb09ef6427f3255764c346408411e5
+MISC ChangeLog 446 BLAKE2B fd599f185905a0e0e2361e944ed9405b6a3a2e73e8d93a8d11d08d2a1c6881b6ae6973b61468c527ea6278099755034a79ef2ef12d847402ba9a110c86071c29 SHA512 1b6f32553c8b17683c2eab361323c47f9382df936b350d89a293637e0b5bd0736e318816cbb71e4cb68aed119d459f9f72eb5b1fc8bc131a21b640300bcc55ed
 MISC metadata.xml 563 BLAKE2B 1bfeeb790fbacf5024fcc6b0492dc88905ac469bf326262d5b1fa53336122d39c735100285341b92a9190b1625f1b747237b80a0800798d0b0a3fe85af1175c1 SHA512 4fcca87a2fa2597187539812749ab74e5391cc7330899251e96611737cee83df7522f83d10c9aef7da41decbd2538ab50f07dd497783fe1db0a17464cadb89a8
