@@ -1,4 +1,7 @@
   14 Aug 2019;  <bemeurer@gentoo.org> granite-5.2.4.ebuild:
+  dev-libs/granite: Fix src_prepare & LICENSE
+
+  14 Aug 2019;  <bemeurer@gentoo.org> granite-5.2.4.ebuild:
   dev-libs/granite: Juippis fixes
 
   13 Aug 2019;  <bemeurer@gentoo.org> granite-5.2.4.ebuild:
